Added query parameter to search on short_name.
